--- a/.verbrc.md
+++ b/.verbrc.md
@@ -6,29 +6,34 @@
 {%= include("install-global") %}
 
 ## Usage
-Now that keywords is installed globally, run `keywords` to use the CLI.
 
-If you want to take it for a test run, copy/paste this into the command line:
+Run `keywords` in the command line.
+
+
+### Adding keywords to package.json
+
+Either type a list of keywords to add:
 
 ```bash
-keywords todo.md "Create my own CLI!"
+keywords foo bar baz
 ```
 
-To add another task, just follow the same format: `keywords [file] [task]`
+Or use `--add` or `-a` with a list of comma-separated words:
 
-Or, use these command line arguments:
+```bash
+keywords --add foo,bar,baz
+```
 
-* `-f`| `--file` specify the file you want to create or append. If no source file is explicitly passed, then `TODO.md` will be created/appended.
-* `-t`| `--task` the task you'd like to add to the specified file
+### Removing keywords from package.json
 
-Example: `keywords -t "Write more documentation"`
+Use `--remove` or `-r` with list of comma-separated words:
+
+```bash
+keywords --remove foo,bar,baz
+```
 
 ## Author
-
-**Jon Schlinkert**
-
-* [github/https://github.com/jonschlinkert](https://github.com/https://github.com/jonschlinkert)
-* [twitter/https://github.com/jonschlinkert](http://twitter.com/https://github.com/jonschlinkert)
+{%= include("author") %}
 
 ## License
 {%= copyright() %}
